--- a/style.css
+++ b/style.css
@@ -22,6 +22,16 @@ font-style: normal;
 
 }
 
+#content {
+	padding: 15px;
+	border-top: 1px solid black;
+	border-bottom: 1px solid black;
+}
+
+#sidebar {
+	border: 1px solid black;
+}
+
 ul.list-inline a{
 	display: inline-block;
 }
@@ -38,7 +48,7 @@ ul.list-inline a{
 
 .butt:hover {
 	text-decoration: none;
-	padding: 5px;
-	background-color: #f3f3f3;
+	padding: 4px;
+	border: 1px solid #d1d1d1;
 	border-radius: 3px;
 }
